[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Pause Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Pokemon Classic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/SettingsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.803922 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 555.0
margin_top = 237.0
margin_right = 725.0
margin_bottom = 483.0
custom_constants/separation = 10

[node name="PauseLbl" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1

[node name="Separator" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 170.0
margin_bottom = 36.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 170.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="SaveBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 170.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Save"

[node name="SettingsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 170.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="MainBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 170.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 170.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 6 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
